import rmk from '../lib';
import shortcuts from '../lib/shortcuts';

const before = {
  id: 1,
  first_name: 'Stephen',
  last_name: 'Nelson',
  email: 'snelson0@yellowbook.com',
  gender: 'Male',
  ip_address: '74.191.108.58',
  city: 'Kapotnya',
  phrase: 'Universal 6th generation portal',
  null: null,
  undefined,
  date: new Date(Date.UTC(2001, 1, 1)),
  0: 0,
  1: 1,
  '-1': -1,
  emptyStr: '',
};
test('Clear object with config 1', () => {
  const config = {};
  const formula = rmk(rmk.clear(config));

  const result = formula(before);
  expect(result).toMatchSnapshot();
});
test('Clear object with config 2', () => {
  const config = {
    nullValue: true,
    undefinedValue: true,
  };
  const formula = rmk(rmk.clear(config));

  const result = formula(before);
  expect(result).toMatchSnapshot();
});
test('Clear object with config 3', () => {
  const config = {
    emptyArray: true,
    emptyObject: true,
    emptyString: true,
  };
  const formula = rmk(rmk.clear(config));

  const result = formula(before);
  expect(result).toMatchSnapshot();
});

test('Clear object', () => {
  const formula = rmk(rmk.clear());

  const result = formula(before);
  expect(result).toMatchSnapshot();
});

test('Clear array of objects', () => {
  const formula = rmk(rmk.clear());

  const result = formula([before]);
  expect(result).toMatchSnapshot();
});

// ---

test('Clear remove undefined and null values', () => {
  const result = shortcuts.clear(before);
  expect(result).toMatchSnapshot();
});

test('Clear array of objects', () => {
  const result = shortcuts.clear([before]);
  expect(result).toMatchSnapshot();
});
